# comparch

./: .gitignore  CMakeLists.txt  Makefile  in_order_core.cpp  in_order_core.h  main.cpp  riscv.svh  trace_TOP.tb.core0.core_monitor_0.jsonl
cmake/: riscv32-gcc-toolchain.cmake
debugger/backend/: backend.go  go.mod
debugger/frontend/: index.html  package-lock.json  package.json
debugger/frontend/src/: App.tsx
firmware/: CMakeLists.txt  build.sh  firmware.ld  start.s
memory/: interface.cpp  interface.h  virtual_flash.cpp  virtual_flash.h
rv32i/in_order/: core.h  core.sv
rv32i_io/: core.cpp  core.h
